--- a/config/tsconfig.loader.json
+++ b/config/tsconfig.loader.json
@@ -7,7 +7,7 @@
 		"lib": ["ES2020", "DOM", "DOM.Iterable"],
 		"module": "CommonJS",
 		"target": "ES5",
-		"outDir": "lib",
+		"outDir": "DELETEME",
 		"moduleResolution": "node",
 		"esModuleInterop": true,
 
@@ -21,9 +21,10 @@
 		"noUnusedParameters": true,
 		"noImplicitReturns": true,
 		"noFallthroughCasesInSwitch": true,
+		"noUncheckedIndexedAccess": true,
 		"jsx": "react",
 		"jsxFactory": "h"
 	},
-	"include": ["src/**/*"],
+	"include": ["src/**/*", "loader/**/*"],
 	"exclude": ["node_modules", "lib", "**/*.test.ts", "**/*/__tests__"]
 }
