--- a/package.json
+++ b/package.json
@@ -7,21 +7,22 @@
   "typings": "lib/index.d.ts",
   "scripts": {
     "lib": "tsc --watch",
+    "loader": "preact build --src loader --dest loader-bundle --sw false --babelConfig config/.babelrc --template loader/template.html --config config/preact.config.js --no-prerender",
     "demo": "preact watch --src demo --sw false --babelConfig config/.babelrc --template demo/template.html --config config/preact.config.js --no-prerender --host localhost"
   },
   "devDependencies": {
     "@types/airtable": "^0.8.1",
-    "asas-virtuais-ts": "1.0.0",
-    "autoprefixer": "^10.2.4",
-    "postcss": "^8.2.6",
-    "preact": "^10.5.12",
     "react": "^17.0.1",
     "tailwindcss": "^2.0.3",
-    "typed-curry": "^1.0.7",
-    "typescript": "^4.0.5"
+    "typescript": "^4.0.5",
+    "preact-cli": "^3.0.5",
+    "pnp-webpack-plugin": "^1.6.4"
   },
   "dependencies": {
-    "pnp-webpack-plugin": "^1.6.4",
-    "preact-cli": "^3.0.5"
+    "asas-virtuais-ts": "3.0.3",
+    "preact": "^10.5.12",
+    "autoprefixer": "^10.2.4",
+    "postcss": "^8.2.6",
+    "typed-curry": "^1.0.7"
   }
 }
