--- a/package.json
+++ b/package.json
@@ -6,9 +6,9 @@
   "main": "lib/index.js",
   "typings": "lib/index.d.ts",
   "scripts": {
-    "lib": "tsc --watch",
-    "loader": "preact build --src loader --dest loader-bundle --babelConfig config/.babelrc --template loader/template.html --preload false --prerenderUrls false --inline-css false --config config/preact.loader.config.js --sw false --json false --no-prerender --no-esm",
-    "demo": "preact watch --src demo --sw false --babelConfig config/.babelrc --template demo/template.html --config config/preact.config.js --no-prerender --host localhost"
+    "watch": "tsc --watch",
+    "build": "preact build --no-prerender --template src/index.ejs --no-sw --config config/preact.config.js",
+    "dev": "preact watch --template src/index.ejs --config config/preact.config.js"
   },
   "devDependencies": {
     "@types/airtable": "^0.8.1",
@@ -22,8 +22,12 @@
     "typescript": "^4.0.5"
   },
   "dependencies": {
+    "@chakra-ui/react": "^1.3.4",
+    "@emotion/react": "^11.1.5",
+    "@emotion/styled": "^11.1.5",
     "asas-virtuais-airtable": "1.0.0",
     "asas-virtuais-ts": "4.0.0",
+    "framer-motion": "^3.10.2",
     "preact": "^10.5.12",
     "typed-curry": "^1.0.7"
   }
