--- a/package.json
+++ b/package.json
@@ -12,13 +12,9 @@
   },
   "devDependencies": {
     "@types/airtable": "^0.8.1",
-    "autoprefixer": "^10.2.4",
-    "pnp-webpack-plugin": "^1.6.4",
-    "postcss": "^8.2.6",
+    "@types/react": "^17.0.3",
     "preact-cli": "^3.0.5",
-    "react": "^17.0.1",
-    "snowpack": "^3.0.11",
-    "tailwindcss": "^2.0.3",
+    "typed-curry": "^1.0.7",
     "typescript": "^4.0.5"
   },
   "dependencies": {
@@ -28,7 +24,6 @@
     "asas-virtuais-airtable": "1.0.0",
     "asas-virtuais-ts": "4.0.0",
     "framer-motion": "^3.10.2",
-    "preact": "^10.5.12",
-    "typed-curry": "^1.0.7"
+    "preact": "^10.5.12"
   }
 }
