+Storybook +Better tsconfig +better .gitignore

--- a/package.json
+++ b/package.json
@@ -1,35 +1,48 @@
 {
-  "name": "gsg-preact-components",
-  "version": "1.0.2",
-  "author": "Ícaro C. Capobianco",
-  "license": "MIT",
-  "main": "lib/index.js",
-  "typings": "lib/index.d.ts",
-  "repository": {
-    "type": "git",
-    "url": "git+https://github.com/getsmartgroup/gsg-preact-components.git"
-  },
-  "scripts": {
-    "watch": "tsc --watch",
-    "build": "preact build --no-prerender --template src/index.ejs --no-sw --config config/preact.config.js",
-    "dev": "preact watch --template src/index.ejs --config config/preact.config.js",
-    "predeploy": "tsc && pnpm build",
-    "deploy": "npm publish"
-  },
-  "devDependencies": {
-    "@types/airtable": "^0.8.1",
-    "@types/react": "^17.0.3",
-    "preact-cli": "^3.0.5",
-    "typed-curry": "^1.0.7",
-    "typescript": "^4.0.5"
-  },
-  "dependencies": {
-    "@chakra-ui/react": "^1.3.4",
-    "@emotion/react": "^11.1.5",
-    "@emotion/styled": "^11.1.5",
-    "asas-virtuais-airtable": "1.0.0",
-    "asas-virtuais-ts": "4.0.0",
-    "framer-motion": "^3.10.2",
-    "preact": "^10.5.12"
-  }
+	"name": "gsg-preact-components",
+	"version": "1.0.2",
+	"author": "Ícaro C. Capobianco",
+	"license": "MIT",
+	"main": "lib/index.js",
+	"typings": "lib/index.d.ts",
+	"repository": {
+		"type": "git",
+		"url": "git+https://github.com/getsmartgroup/gsg-preact-components.git"
+	},
+	"scripts": {
+		"watch": "tsc --watch",
+		"build": "preact build --no-prerender --template src/index.ejs --no-sw --config config/preact.config.js",
+		"dev": "preact watch --template src/index.ejs --config config/preact.config.js",
+		"deploy": "npm publish",
+		"predeploy": "tsc && pnpm build",
+		"storybook": "start-storybook -p 6006",
+		"build-storybook": "build-storybook"
+	},
+	"dependencies": {
+		"preact-cli": "^3.0.5",
+		"@types/airtable": "^0.8.1",
+		"@types/react": "^17.0.3",
+		"@chakra-ui/react": "^1.3.4",
+		"@emotion/react": "^11.1.5",
+		"@emotion/styled": "^11.1.5",
+		"asas-virtuais-airtable": "1.0.0",
+		"asas-virtuais-ts": "4.0.0",
+		"framer-motion": "^3.10.2",
+		"typescript": "^4.0.5"
+	},
+	"devDependencies": {
+		"@storybook/addon-essentials": "^6.2.8",
+		"@storybook/cli": "^6.2.8",
+		"@storybook/preact": "^6.2.8",
+		"sb": "^6.2.8",
+		"@chakra-ui/icons": "^1.0.10",
+		"@chakra-ui/react": "^1.5.1",
+		"@emotion/react": "^11.1.5",
+		"@emotion/styled": "^11.3.0",
+		"framer-motion": "^4.1.4",
+		"preact": "^10.5.13",
+		"preact-router": "^3.2.1",
+		"react-icons": "^4.2.0",
+		"typed-curry": "^1.0.7"
+	}
 }
