--- a/.gitignore
+++ b/.gitignore
@@ -1,16 +1,26 @@
-node_modules
+# dependencies
+/node_modules
+/.pnp
+.pnp.js
+
 yarn.lock
 package-lock.json
+pnpm-lock.yaml
+
+# misc
+.DS_Store
+.env.local
+.env.development.local
+.env.test.local
+.env.production.local
+
+npm-debug.log*
+yarn-debug.log*
+yarn-error.log*
+
+node_modules
+
 size-plugin.json
+
 build/*
 !build/bundle.js
-yarn-error.log
-./.vscode
-./.vscode/
-/.vscode
-**.vscode**
-Node
-public
-.env
-pnpm-lock.yaml
-stats.json
