--- a/package.json
+++ b/package.json
@@ -1,5 +1,5 @@
 {
-	"name": "vite-preact-chakra-template",
+	"name": "gsg-preact-components",
 	"version": "1.0.0",
 	"author": "Ícaro C. Capobianco",
 	"license": "MIT",
