--- a/package.json
+++ b/package.json
@@ -15,7 +15,7 @@
 		"tsc": "concurrently \"npm run es5\" \"npm run es6\"",
 		"watch": "concurrently \"npm run es5 --watch\" \"npm run es6 --watch\"",
 		"storybook": "start-storybook -p 6006",
-		"build-storybook": "build-storybook",
+		"build-storybook": "build-storybook -o dist/storybook/",
 		"bundle": "npm-run-all --parallel bundle:*",
 		"bundle:es5": "microbundle -i src/index.tsx -o es5/index.js --no-pkg-main -f cjs",
 		"bundle:esm": "microbundle -i src/index.tsx -o esm/index.js --no-pkg-main -f esm",
@@ -26,8 +26,9 @@
 		"@chakra-ui/react": "^1.3.3",
 		"@emotion/react": "^11.1.5",
 		"@emotion/styled": "^11.1.5",
+		"evosus-swaggerhub-sdk": "workspace:^6.6.4",
 		"framer-motion": "^3.7.0",
-		"gsg-airtable-data-sdk": "workspace:^undefined",
+		"gsg-airtable-sdk": "workspace:^1.0.0",
 		"preact": "^10.5.13",
 		"react-icons": "^4.2.0"
 	},
