--- a/tsconfig.json
+++ b/tsconfig.json
@@ -62,7 +62,8 @@
 		"jsx": "preserve",
 		"jsxFactory": "h",
 		"jsxFragmentFactory": "Fragment",
-		"skipLibCheck": true
+		"skipLibCheck": true,
+		"preserveSymlinks": true
 	},
 	"include": ["src/**/*"],
 	"exclude": ["node_modules"],
