--- a/package.json
+++ b/package.json
@@ -26,10 +26,12 @@
 		"@chakra-ui/react": "^1.3.3",
 		"@emotion/react": "^11.1.5",
 		"@emotion/styled": "^11.1.5",
+		"@types/js-cookie": "^2.2.6",
 		"airtable": "^0.11.1",
 		"evosus-swaggerhub-sdk": "workspace:^6.6.4",
 		"framer-motion": "^3.7.0",
 		"gsg-airtable-sdk": "workspace:^1.0.0",
+		"js-cookie": "^2.2.1",
 		"preact": "^10.5.13",
 		"react-icons": "^4.2.0"
 	},
