--- a/package.json
+++ b/package.json
@@ -33,7 +33,8 @@
 		"gsg-airtable-sdk": "workspace:^1.0.0",
 		"js-cookie": "^2.2.1",
 		"preact": "^10.5.13",
-		"react-icons": "^4.2.0"
+		"react-icons": "^4.2.0",
+		"wc-rest-ts": "workspace:^1.0.0"
 	},
 	"devDependencies": {
 		"@prefresh/vite": "^2.2.1",
