--- a/tsconfig.json
+++ b/tsconfig.json
@@ -59,7 +59,7 @@
 		"typeRoots": ["node_modules/@types", "src/types"],
 
 		// react
-		"jsx": "preserve",
+		"jsx": "react",
 		"jsxFactory": "h",
 		"jsxFragmentFactory": "Fragment",
 		"skipLibCheck": true,
