--- a/package.json
+++ b/package.json
@@ -22,6 +22,7 @@
 		"bundle:umd": "microbundle -i src/index.tsx -o umd/index.js --no-pkg-main -f umd"
 	},
 	"dependencies": {
+		"@chakra-ui/hooks": "^1.5.3",
 		"@chakra-ui/icons": "^1.0.5",
 		"@chakra-ui/react": "^1.3.3",
 		"@emotion/react": "^11.1.5",
@@ -32,6 +33,7 @@
 		"framer-motion": "^3.7.0",
 		"get-smart-client": "workspace:^1.0.0",
 		"gsg-airtable-sdk": "workspace:^1.0.0",
+		"gsg-integrations": "workspace:^1.0.0",
 		"gsg-rb-ts": "workspace:^1.0.0",
 		"js-cookie": "^2.2.1",
 		"preact": "^10.5.13",
