--- a/package.json
+++ b/package.json
@@ -37,8 +37,10 @@
 		"gsg-airtable-sdk": "workspace:^1.0.0",
 		"gsg-integrations": "workspace:^1.0.0",
 		"gsg-rb-ts": "workspace:^1.0.0",
+		"history": "^5.0.0",
 		"js-cookie": "^2.2.1",
 		"preact": "^10.5.13",
+		"preact-router": "^3.2.1",
 		"react-icons": "^4.2.0",
 		"wc-rest-ts": "workspace:^1.0.0",
 		"zod": "^3.2.0"
