--- a/package.json
+++ b/package.json
@@ -5,6 +5,7 @@
 	"license": "MIT",
 	"main": "es5/index.js",
 	"module": "esm/index.js",
+	"types": "types/index.d.ts",
 	"unpkg": "umd/index.js",
 	"source": "src/index.tsx",
 	"scripts": {
@@ -12,8 +13,9 @@
 		"es5": "tsc -p tsconfig.json --target es6 --outDir es6 --module es6",
 		"es6": "tsc -p tsconfig.json --target es5 --outDir es5 --module commonjs",
 		"tsc": "concurrently \"npm run es5\" \"npm run es6\"",
-		"watch-es5": "tsc -p tsconfig.json --target es5 --outDir es5 --module commonjs --watch",
-		"watch-es6": "tsc -p tsconfig.json --target es6 --outDir es6 --module es6 --watch",
+		"watch-es5": "tsc -p tsconfig.json --target es5 --outDir es5 --module commonjs --watch --declaration false",
+		"watch-es6": "tsc -p tsconfig.json --target es6 --outDir es6 --module es6 --watch --declaration false",
+		"watch-types": "tsc -p tsconfig.json --target es6 --outDir es6 --module es6 --watch --declarationDir types --emitDeclarationOnly",
 		"watch": "concurrently -n w: npm:watch-*",
 		"storybook": "start-storybook -p 6006",
 		"build-storybook": "build-storybook -o dist/storybook/",
