--- a/package.json
+++ b/package.json
@@ -13,53 +13,48 @@
 		"es5": "tsc -p tsconfig.json --target es6 --outDir es6 --module es6",
 		"es6": "tsc -p tsconfig.json --target es5 --outDir es5 --module commonjs",
 		"tsc": "concurrently \"npm run es5\" \"npm run es6\"",
-		"watch-es5": "tsc -p tsconfig.json --target es5 --outDir es5 --module commonjs --watch --declaration false",
-		"watch-es6": "tsc -p tsconfig.json --target es6 --outDir es6 --module es6 --watch --declaration false",
-		"watch-types": "tsc -p tsconfig.json --target es6 --outDir es6 --module es6 --watch --declarationDir types --emitDeclarationOnly",
+		"watch-es5": "tsc -p tsconfig.json --target es5 --outDir es5 --module commonjs --watch",
+		"watch-es6": "tsc -p tsconfig.json --target es6 --outDir es6 --module es6 --watch",
 		"watch": "concurrently -n w: npm:watch-*",
 		"storybook": "start-storybook -p 6006",
 		"build-storybook": "build-storybook -o dist/storybook/",
-		"bundle": "npm-run-all --parallel bundle:*",
-		"bundle:vite": "vite build",
-		"bundle:es5": "microbundle -i src/index.tsx -o es5/index.js --no-pkg-main -f cjs",
-		"bundle:esm": "microbundle -i src/index.tsx -o esm/index.js --no-pkg-main -f esm",
-		"bundle:umd": "microbundle -i src/index.tsx -o umd/index.js --no-pkg-main -f umd"
+		"bundle": "vite build"
 	},
 	"dependencies": {
-		"@chakra-ui/hooks": "^1.5.3",
-		"@chakra-ui/icons": "^1.0.5",
-		"@chakra-ui/react": "^1.3.3",
-		"@emotion/react": "^11.1.5",
-		"@emotion/styled": "^11.1.5",
-		"@types/js-cookie": "^2.2.6",
+		"@chakra-ui/hooks": "^1.5.4",
+		"@chakra-ui/icons": "^1.0.14",
+		"@chakra-ui/react": "^1.6.5",
+		"@emotion/react": "^11.4.0",
+		"@emotion/styled": "^11.3.0",
+		"@types/js-cookie": "^2.2.7",
 		"airtable": "^0.11.1",
 		"evosus-swaggerhub-sdk": "workspace:^6.6.4",
-		"framer-motion": "^3.7.0",
+		"framer-motion": "^4.1.17",
 		"get-smart-client": "workspace:^1.0.0",
 		"gsg-airtable-sdk": "workspace:^1.0.0",
 		"gsg-integrations": "workspace:^1.0.0",
 		"gsg-rb-ts": "workspace:^1.0.0",
 		"history": "^5.0.0",
 		"js-cookie": "^2.2.1",
-		"preact": "^10.5.13",
+		"preact": "^10.5.14",
 		"preact-router": "^3.2.1",
 		"react-icons": "^4.2.0",
 		"wc-rest-ts": "workspace:^1.0.0",
-		"zod": "^3.2.0"
+		"zod": "^3.5.1"
 	},
 	"devDependencies": {
-		"@prefresh/vite": "^2.2.1",
-		"@storybook/cli": "^6.3.0-alpha.19",
-		"@storybook/react": "^6.3.0-alpha.19",
-		"@types/node": "^14.14.31",
-		"@vitejs/plugin-react-refresh": "^1.1.0",
-		"concurrently": "^6.0.2",
-		"microbundle": "^0.13.0",
+		"@prefresh/vite": "^2.2.3",
+		"@storybook/cli": "^6.3.4",
+		"@storybook/react": "^6.3.4",
+		"@types/node": "^16.3.2",
+		"@vitejs/plugin-react-refresh": "^1.3.5",
+		"concurrently": "^6.2.0",
+		"microbundle": "^0.13.3",
 		"npm-run-all": "^4.1.5",
-		"sb": "^6.2.8",
-		"typescript": "^4.2.4",
-		"vite": "^2.0.1",
-		"vite-aliases": "^0.5.0",
-		"vite-preset-react": "^1.1.3"
+		"sb": "^6.3.4",
+		"typescript": "^4.3.5",
+		"vite": "^2.4.2",
+		"vite-aliases": "^0.8.2",
+		"vite-preset-react": "^1.3.0"
 	}
 }
