--- a/package.json
+++ b/package.json
@@ -39,6 +39,7 @@
 		"preact": "^10.5.14",
 		"preact-router": "^3.2.1",
 		"react-icons": "^4.2.0",
+		"readable-stream": "^3.6.0",
 		"wc-rest-ts": "workspace:^1.0.0",
 		"zod": "^3.5.1"
 	},
@@ -53,7 +54,7 @@
 		"npm-run-all": "^4.1.5",
 		"sb": "^6.3.4",
 		"typescript": "^4.3.5",
-		"vite": "^2.4.2",
+		"vite": "^2.4.3",
 		"vite-aliases": "^0.8.2",
 		"vite-preset-react": "^1.3.0"
 	}
