--- a/tsconfig.json
+++ b/tsconfig.json
@@ -54,9 +54,9 @@
 		// "experimentalDecorators": true /* Enables experimental support for ES7 decorators. */,
 		// "emitDecoratorMetadata": true /* Enables experimental support for emitting type metadata for decorators. */,
 
-		"lib": ["ESNext", "DOM", "DOM.Iterable"],
+		"lib": ["DOM", "DOM.Iterable", "ESNext"],
 		// "types": ["node"],
-		"typeRoots": ["node_modules/@types", "src/types"],
+		// "typeRoots": ["src/types"],
 
 		// react
 		"jsx": "react",
