--- a/package.json
+++ b/package.json
@@ -44,6 +44,7 @@
 		"zod": "^3.5.1"
 	},
 	"devDependencies": {
+		"@mdx-js/preact": "^1.6.22",
 		"@prefresh/vite": "^2.2.3",
 		"@storybook/cli": "^6.3.4",
 		"@storybook/react": "^6.3.4",
@@ -53,6 +54,7 @@
 		"microbundle": "^0.13.3",
 		"npm-run-all": "^4.1.5",
 		"sb": "^6.3.4",
+		"storybook-builder-vite": "^0.0.12",
 		"typescript": "^4.3.5",
 		"vite": "^2.4.3",
 		"vite-aliases": "^0.8.2",
