--- a/package.json
+++ b/package.json
@@ -55,9 +55,11 @@
 		"npm-run-all": "^4.1.5",
 		"sb": "^6.3.4",
 		"storybook-builder-vite": "^0.0.12",
+		"tsconfig-paths-webpack-plugin": "^3.5.1",
 		"typescript": "^4.3.5",
 		"vite": "^2.4.3",
 		"vite-aliases": "^0.8.2",
-		"vite-preset-react": "^1.3.0"
+		"vite-preset-react": "^1.3.0",
+		"vite-tsconfig-paths": "^3.3.13"
 	}
 }
