--- a/package.json
+++ b/package.json
@@ -28,6 +28,7 @@
 		"@emotion/styled": "^11.3.0",
 		"@types/js-cookie": "^2.2.7",
 		"airtable": "^0.11.1",
+		"change-case": "^4.1.2",
 		"evosus-swaggerhub-sdk": "workspace:^6.6.4",
 		"framer-motion": "^4.1.17",
 		"get-smart-client": "workspace:^1.0.0",
