--- a/package.json
+++ b/package.json
@@ -30,20 +30,12 @@
 		"@types/js-cookie": "^2.2.7",
 		"airtable": "^0.11.1",
 		"change-case": "^4.1.2",
-		"evosus-swaggerhub-sdk": "workspace:^6.6.4",
 		"framer-motion": "^4.1.17",
-		"get-smart-client": "workspace:^1.0.0",
 		"gsg-airtable-sdk": "workspace:^1.0.0",
-		"gsg-integrations": "workspace:^1.0.0",
-		"gsg-rb-ts": "workspace:^1.0.0",
-		"history": "^5.0.0",
-		"js-cookie": "^2.2.1",
 		"preact": "^10.5.14",
 		"preact-router": "^3.2.1",
 		"react-icons": "^4.2.0",
-		"readable-stream": "^3.6.0",
-		"wc-rest-ts": "workspace:^1.0.0",
-		"zod": "^3.5.1"
+		"readable-stream": "^3.6.0"
 	},
 	"devDependencies": {
 		"@mdx-js/preact": "^1.6.22",
