--- a/package.json
+++ b/package.json
@@ -23,11 +23,10 @@
 	"dependencies": {
 		"@chakra-ui/hooks": "^1.5.4",
 		"@chakra-ui/icons": "^1.0.14",
-		"@chakra-ui/react": "^1.6.5",
+		"@chakra-ui/react": "^1.8.8",
 		"@chakra-ui/react-utils": "^1.1.2",
-		"@emotion/react": "^11.4.0",
-		"@emotion/styled": "^11.3.0",
-		"@types/js-cookie": "^2.2.7",
+		"@emotion/react": "^11.10.4",
+		"@emotion/styled": "^11.10.4",
 		"airtable": "^0.11.1",
 		"change-case": "^4.1.2",
 		"framer-motion": "^4.1.17",
@@ -43,6 +42,7 @@
 		"@storybook/cli": "^6.3.4",
 		"@storybook/react": "^6.3.4",
 		"@types/node": "^16.3.2",
+		"@types/react": "^18.0.18",
 		"@vitejs/plugin-react-refresh": "^1.3.5",
 		"concurrently": "^6.2.0",
 		"microbundle": "^0.13.3",
